# DIY_Eink_Gadget

./: README.md
Firmware/: .gitignore  CMakeLists.txt  README.md  prj.conf
Firmware/boards/: eink_companion_nrf52810_custom.overlay  eink_companion_nrf52840dk.overlay
Firmware/scripts/: eink_image.py  image_to_c_array.py  image_to_icon.py
Firmware/src/: board.c  board.h  gfx.c  gfx.h  gfx_font.c  gfx_font.h  gfx_font_default.c  gfx_icon.c  gfx_icon.h  main.c  retained.c  retained.h  screen_controller.c  screen_controller.h  screen_game_dashboard.c  screen_game_dashboard.h  ssd1680.c  ssd1680.h
Firmware/src/fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h
Firmware/src/icons/: agent.h  dice_20.h  dice_multi.h  dice_single.h  heart.h  minion.h  shield.h  sword.h
Hardware/: 01_TOP.SchDoc  02_MCU.SchDoc  DIY_EINK_Gadget.PcbDoc  DIY_EINK_Gadget.PrjPcb  DIY_EINK_Gadget.PrjPcbStructure  MFGOutput.OutJob  README.md
Hardware/Source files/: 03_EINK.SchDoc  04_POWER.SchDoc  DIY_EINK_Gadget.PcbDoc  DIY_EINK_Gadget.PrjPcb  DIY_EINK_Gadget.PrjPcbStructure
Mechanical/: Bottom Enclosure.stl  Enclosure.f3z  README.md
(+42 files in other folders)
